--- a/studyDemo/studyDemo0801/src/main/resources/application.yml
+++ b/studyDemo/studyDemo0801/src/main/resources/application.yml
@@ -1,1 +1,24 @@
-mybatis.
+#连接kafka集群
+spring:
+  kafka:
+    bootstrap-servers: hadoop102:9002,hadhoop103:9092
+    #生产者的序列化
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      #消费者的反序列化
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      #消费者组配置
+      group-id: tkzou
+
+
+      #开启springMVC文件上传功能
+  servlet:
+    multipart:
+      enabled: true
+server:
+  port: 8089
+
+
