--- a/studyDemo/权限系统/Shiro-Action-master/src/main/resources/application.properties
+++ b/studyDemo/权限系统/Shiro-Action-master/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.profiles.active=dev
 server.port=8080
 
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root123456
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shiro_action?useSSL=false&characterEncoding=UTF8&serverTimezone=UTC
+
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
@@ -15,6 +17,7 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.cache.type=redis
 spring.cache.redis.time-to-live=600000
+
 
 spring.mail.host=smtp.163.com
 spring.mail.username=shiro_action@163.com
